

option java_outer_classname="DictionaryItemProtocol";
package Alachisoft.NCache.Common.Protobuf;
message DictionaryItem {
	optional string key = 1;
	optional bytes value = 2;
}