option java_outer_classname="QueryTypeProtocol";
package Alachisoft.NCache.Common.Protobuf;

enum QueryType 
{
		SEARCH_KEYS = 0;
        SEARCH_ENTRIES = 1;
        AGGREGATE_FUNCTIONS = 2;
}